<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="1dp">

        <ImageButton
            android:id="@+id/imageButtonLeftArrow"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/rounded_button_background"
            android:clickable="true"
            android:contentDescription="@string/back"
            android:focusable="true"
            android:padding="4dp"
            android:scaleType="centerInside"
            app:fabSize="normal"
            app:maxImageSize="16dp"
            app:srcCompat="@drawable/left_arrow"
            app:tint="@color/default_text_on_light" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="42dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/teapp"
                app:tint="@color/green_tea" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="2dp"
            android:backgroundTint="@color/green_tea"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editTextRecordName"
                    android:layout_width="230dp"
                    android:layout_height="69dp"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/default_record_name"
                    android:text=""
                    android:textSize="36sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:inputType="text"
                    android:importantForAutofill="no" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="2dp"
            android:backgroundTint="@color/green_tea"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="90dp"
                android:layout_marginEnd="90dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextMinutes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/default_counter_value"
                    android:inputType="number"
                    android:textAlignment="textEnd"
                    android:textColor="@color/default_text_on_light"
                    android:textSize="72sp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.8"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center_horizontal"
                    android:text=":"
                    android:textSize="64sp"
                    android:translationY="10dp"
                    tools:ignore="HardcodedText" />

                <EditText
                    android:id="@+id/editTextSeconds"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/default_minutes_value"
                    android:inputType="number"
                    android:textAlignment="textStart"
                    android:textColor="@color/default_text_on_light"
                    android:textSize="72sp" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="2dp"
                android:backgroundTint="@color/green_tea"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="80dp"
                    android:layout_marginEnd="80dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/editTextCounter"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="center_horizontal"
                        android:hint="@string/default_counter_value"
                        android:inputType="number"
                        android:textColor="@color/default_text_on_light"
                        android:textSize="72sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/buttonCounterPlusOne"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/plus_one" />

                        <Button
                            android:id="@+id/buttonCounterMinusOne"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:text="@string/minus_one" />

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerTimeAdjustments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/card_adjustment" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="2dp"
            android:backgroundTint="@color/green_tea"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextWeight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="sans-serif-condensed"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:hint="@string/default_counter_value"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/default_text_on_light"
                    android:textSize="38sp" />

                <TextView
                    android:id="@+id/textViewWeight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.50"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/grams_short"
                    android:textSize="22sp"
                    android:translationY="5dp" />

                <EditText
                    android:id="@+id/editTextVolume"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="sans-serif-condensed"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:hint="@string/default_counter_value"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/default_text_on_light"
                    android:textSize="38sp" />

                <TextView
                    android:id="@+id/textViewVolume"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.50"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/millis_short"
                    android:textSize="22sp"
                    android:translationY="5dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="2dp"
                android:backgroundTint="@color/green_tea"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/editTextTemperature"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="100dp"
                            android:layout_marginEnd="0dp"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-condensed"
                            android:gravity="center_horizontal"
                            android:hint="@string/default_counter_value"
                            android:inputType="number"
                            android:textColor="@color/default_text_on_light"
                            android:textSize="72sp" />

                        <TextView
                            android:id="@+id/textTemperatureUnit"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="70dp"
                            android:text="@string/deg_celsius"
                            android:textColor="@color/default_text_on_light"
                            android:gravity="bottom"
                            android:textSize="32sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/button60deg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/deg60" />

                        <Button
                            android:id="@+id/button80deg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/deg80" />

                        <Button
                            android:id="@+id/button90deg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/deg90" />

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <Button
            android:id="@+id/buttonSaveRecord"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:backgroundTint="@color/green_tea_darker"
            android:text="@string/update_record"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="5dp"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonDeleteRecord"
            android:layout_width="match_parent"
            android:backgroundTint="@color/red_caution"
            android:layout_marginHorizontal="5dp"
            android:layout_height="75dp"
            android:text="@string/delete_record"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>
</ScrollView>